--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,17 +17,17 @@
 
                 <div class="info-item">
                     <i class="fas fa-phone"></i>
-                    <p>+123-456-7890</p>
+                    <p>+92 3143443430</p>
                 </div>
 
                 <div class="info-item">
                     <i class="fas fa-envelope"></i>
-                    <p>hello@codepy.com</p>
+                    <p>f24bdats1m02012@iub.edu.pk</p>
                 </div>
 
                 <div class="info-item">
                     <i class="fas fa-map-marker-alt"></i>
-                    <p>123 Anywhere ST., Any City, 12345</p>
+                    <p>Bahawalpur, Pakistan</p>
                 </div>
 
                 <div class="contact-image">
