--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
 <section class="hero">
     <div class="container">
         <div class="hero-content">
-            <h1 class="animate">WELCOME TO <span>CODE.PY</span></h1>
+            <h1 class="animate">WELCOME TO <span>CodePy</span></h1>
             <h2 class="animate">Your AI powered Python Tutor</h2>
-            <p class="animate">Interactive lessons, real-time compiler, and an AI chatbot to help you code with
+            <p class="animate">Interactive lessons, real-time compiler, and an AI Assistant to help you code with
                 confidence
             </p>
             <a href="tutorials.html" class="btn animate">LEARN MORE</a>
@@ -34,10 +34,10 @@
                 <div class="feature-icon">
                     <i class="fas fa-robot"></i>
                 </div>
-                <h3>Ask your AI Tutor for help</h3>
-                <p>Get instant help from our chatbot whether you're stuck on syntax or want to understand a concept
+                <h3>Ask your AI Assistant for help</h3>
+                <p>Get instant help from our assistant whether you're stuck on syntax or want to understand a concept
                     better</p>
-                <a href="chatbot.html" class="btn btn-outline">Talk to the Chatbot</a>
+                <a href="chatbot.html" class="btn btn-outline">Talk to the Assistant</a>
             </div>
 
             <div class="feature-card">
